# elm-solve-deps

./: Cargo.toml  README.md
.github/workflows/: ci.yml
elm-solve-deps-bin/: Cargo.toml  README.md
elm-solve-deps-bin/src/: main.rs
elm-solve-deps-lib/: Cargo.toml  README.md
elm-solve-deps-lib/examples/: build_registry.rs  solve_deps.rs  statistics.rs
elm-solve-deps-lib/src/: constraint.rs  dependency_provider.rs  lib.rs  pkg_version.rs  project_config.rs  solver.rs
elm-solve-deps-wasm/: Cargo.toml
elm-solve-deps-wasm/example/: package.json
elm-solve-deps-wasm/src/: lib.rs  utils.rs
examples/: build_registry.rs  solve_deps.rs  solve_deps_bis.rs  solve_pkg_deps.rs  statistics.rs
src/: constraint.rs  dependency_provider.rs  lib.rs  pkg_version.rs  project_config.rs  solver.rs
