# SPDX-License-Identifier: MPL-2.0

[package]
name = "pubgrub-dependency-provider-elm"
version = "0.1.0"
authors = ["Matthieu Pizenberg <matthieu.pizenberg@gmail.com>"]
edition = "2018"
description = "Dependency provider for elm packages"
readme = "README.md"
repository = "https://github.com/mpizenberg/pubgrub-rs"
license = "MPL-2.0"
keywords = ["dependency", "pubgrub", "semver", "solver", "version", "elm"]
categories = ["algorithms"]
include = ["Cargo.toml", "LICENSE", "README.md", "src/**", "tests/**", "examples/**"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# pubgrub = { git = "https://github.com/pubgrub-rs/pubgrub", branch = "dev", features = ["serde"] }
pubgrub = { version = "0.2", features = ["serde"] }
thiserror = "1.0"
rustc-hash = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"

[dev-dependencies]
proptest = "0.10.1"
ron="0.6"
csv = "1.1"
ureq = "1.5.2"
