# SPDX-License-Identifier: MPL-2.0

[package]
name = "pubgrub-dependency-provider-elm"
version = "0.1.0"
authors = ["Matthieu Pizenberg <matthieu.pizenberg@gmail.com>"]
edition = "2018"
description = "Dependency provider for elm packages"
readme = "README.md"
repository = "https://github.com/mpizenberg/pubgrub-dependency-provider-elm"
license = "MPL-2.0"
keywords = ["dependency", "pubgrub", "semver", "solver", "version", "elm"]
categories = ["algorithms"]
include = ["Cargo.toml", "LICENSE", "README.md", "src/**", "tests/**", "examples/**"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# pubgrub = { git = "https://github.com/pubgrub-rs/pubgrub", branch = "dev", features = ["serde"] }
pubgrub = { version = "0.2", features = ["serde"] }
thiserror = "1.0.30"
serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0.72"

[dev-dependencies]
anyhow = "1.0.51"
ron = "0.6"
csv = "1.1"
ureq = "1.5.2"
dirs = "3.0.1"
