# SPDX-License-Identifier: MPL-2.0

[package]
name = "elm-solve-deps-bin"
version = "0.1.0"
authors = ["Matthieu Pizenberg <matthieu.pizenberg@gmail.com>"]
edition = "2021"
description = "A dependency solver for the elm ecosystem"
readme = "README.md"
repository = "https://github.com/mpizenberg/elm-solve-deps"
license = "MPL-2.0"
keywords = ["dependency", "pubgrub", "solver", "version", "elm"]
categories = ["algorithms"]
include = ["Cargo.toml", "LICENSE", "README.md", "src/**", "tests/**"]

[dependencies]
elm-solve-deps = { version = "0.1", path = "../elm-solve-deps-lib" }
pubgrub = { version = "0.2", features = ["serde"] }
serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0.72"
anyhow = "1.0.51"
ureq = "1.5.2"
dirs = "3.0.1"

[[bin]]
name = "elm-solve-deps"
path = "src/main.rs"
