# SPDX-License-Identifier: MPL-2.0

[package]
name = "elm-solve-deps"
version = "0.1.1"
authors = ["Matthieu Pizenberg <matthieu.pizenberg@gmail.com>"]
edition = "2021"
description = "A dependency solver for the elm ecosystem"
readme = "README.md"
repository = "https://github.com/mpizenberg/elm-solve-deps"
license = "MPL-2.0"
keywords = ["dependency", "pubgrub", "solver", "version", "elm"]
categories = ["algorithms"]
include = ["Cargo.toml", "LICENSE", "README.md", "src/**", "tests/**"]

[dependencies]
pubgrub = { version = "0.2", features = ["serde"] }
thiserror = "1.0.30"
serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0.72"

[dev-dependencies]
ron = "0.6"
csv = "1.1"
ureq = "1.5.2"
